--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
+    <title>El Charrúa Salta - restaurant </title>
+    <!-- meta tags -->
+    <meta name="title" content="El Charrua Salta - La mejor parrilla">
+    <meta name="description" content="El Charrua es un restaurante de Salta Capital, su especialidad son las carnes y comidas regionales.">
+    <meta name="keywords" content="parrilla, carnes, Salta, comidas regionales, paella, Charrua, restaurant, restaurante">
+
 </body>
 </html>
