--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="title" content="El Charrua Salta - La mejor parrilla">
     <meta name="description" content="El Charrua es un restaurante de Salta Capital, su especialidad son las carnes y comidas regionales.">
     <meta name="keywords" content="parrilla, carnes, Salta, comidas regionales, paella, Charrua, restaurant, restaurante">
-
+    <!-- favicon -->
+    <link rel="shortcut icon" href="./favicon.svg" type="image/svg-icon">
 </body>
 </html>
