add google fonts

--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
     <meta name="keywords" content="parrilla, carnes, Salta, comidas regionales, paella, Charrua, restaurant, restaurante">
     <!-- favicon -->
     <link rel="shortcut icon" href="./favicon.svg" type="image/svg-icon">
+    <!-- google font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Forum&display=swap" rel="stylesheet">
+
 </body>
 </html>
