add preload image

--- a/index.html
+++ b/index.html
@@ -16,5 +16,11 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Forum&display=swap" rel="stylesheet">
     <!-- styles css -->
     <link rel="stylesheet" href="./assets/css/style.css">
+    <!-- preload images -->
+    <link rel="preload" as="image" href="./assets/images/hero-slider-1.jpg">
+    <link rel="preload" as="image" href="./assets/images/hero-slider-2.jpg">
+    <link rel="preload" as="image" href="./assets/images/hero-slider-3.jpg">
+    </head>
+    <body>
 </body>
 </html>
