add javaScript links

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <link rel="preload" as="image" href="./assets/images/hero-slider-2.jpg">
     <link rel="preload" as="image" href="./assets/images/hero-slider-3.jpg">
     </head>
-    <body>
+<body>
+    <!-- javaScript links -->
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
