--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
     <link rel="preload" as="image" href="./assets/images/hero-slider-3.jpg">
 </head>
 <body>
+    <!--
+        #PRELOADER
+    -->
+    <div class="preload" data-preaload>
+        <div class="circle"></div>
+        <p class="text">El Charrúa</p>
+    </div>
+
+
     <!-- javaScript links -->
     <script src="./assets/js/script.js"></script>
     <!-- ionicon link -->
