--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El Charrúa Salta - restaurant </title>
+    <title>El Charrúa Salta - Restaurant </title>
     <!-- meta tags -->
     <meta name="title" content="El Charrua Salta - La mejor parrilla">
     <meta name="description" content="El Charrua es un restaurante de Salta Capital, su especialidad son las carnes y comidas regionales.">
