--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Forum&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,400;9..40,700&family=Forum&family=Pacifico&display=swap" rel="stylesheet">
     <!-- styles css -->
     <link rel="stylesheet" href="./assets/css/style.css">
     <!-- preload images -->
@@ -29,9 +29,11 @@
         #PRELOADER
     -->
     <div class="preload" data-preaload>
-        <div class="circle"></div>
+        <span class="loader"></span>
+        <!-- <div class="circle"></div> -->
         <p class="text">El Charrúa</p>
     </div>
+
 
 
     <!-- javaScript links -->
