--- a/index.html
+++ b/index.html
@@ -29,11 +29,51 @@
         #PRELOADER
     -->
     <div class="preload" data-preaload>
-        <span class="loader"></span>
+        <!-- <span class="loader"></span> -->
         <!-- <div class="circle"></div> -->
         <p class="text">El Charrúa</p>
     </div>
 
+
+    <!-- 
+        - #TOP BAR
+    -->
+
+    <div class="topbar">
+        <div class="container">
+
+        <address class="topbar-item">
+            <div class="icon">
+            <ion-icon name="location-outline" aria-hidden="true"></ion-icon>
+            </div>
+
+            <span class="span">
+                Gral. Güemes 186 (Paseo Güemes) - Salta Capital
+            </span>
+        </address>
+
+        <div class="separator"></div>
+
+        <div class="topbar-item item-2">
+            <div class="icon">
+            <ion-icon name="time-outline" aria-hidden="true"></ion-icon>
+            </div>
+
+            <span class="span">De : 8.00 am a 10.00 pm</span>
+        </div>
+
+        <a href="tel:+11234567890" class="topbar-item link">
+            <div class="icon">
+            <ion-icon name="call-outline" aria-hidden="true"></ion-icon>
+            </div>
+
+            <span class="span">+54 9 (387) 422-5166</span>
+        </a>
+
+        <div class="separator"></div>
+
+        </div>
+    </div>
 
 
     <!-- javaScript links -->
